--- a/SendLink/App.xaml
+++ b/SendLink/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="PasteLink.App"
+﻿<Application x:Class="SendLink.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PasteLink"
+             xmlns:local="clr-namespace:SendLink"
              xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
