--- a/SendLink/Views/ConnectedWindow.xaml
+++ b/SendLink/Views/ConnectedWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="PasteLink.ConnectedWindow"
+﻿<Window x:Class="SendLink.ConnectedWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PasteLink"
+        xmlns:local="clr-namespace:SendLink"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="PasteLink" Height="680" Width="740" MinHeight="400" MinWidth="500">
+        Title="SendLink" Height="680" Width="740" MinHeight="400" MinWidth="500">
 
     <Grid FocusManager.FocusedElement="{Binding ElementName=TextBox}">
         <Grid.ColumnDefinitions>
@@ -110,7 +110,8 @@
             <Border Background="White" Margin="4" CornerRadius="3">
                 <TextBox x:Name="TextBox" materialDesign:HintAssist.Hint="Enter text or URL" 
                 Margin="8" VerticalAlignment="Center" BorderThickness="0" KeyDown="TextBox_KeyDown"
-                         MinWidth="400"/>
+                         TextWrapping="Wrap" MinWidth="400" MaxHeight="60" MinHeight="20"
+                         FontSize="20"/>
             </Border>
 
             <Button Grid.Column="1"  x:Name="SendButton" Click="SendButton_Click"
